--- a/custom_components/ecoflow/translations/en.json
+++ b/custom_components/ecoflow/translations/en.json
@@ -5,12 +5,12 @@
       "product_unsupported": "Sorry, This product is not supported now.\n(Product type: {product})"
     },
     "error": {
-      "timeout": "Connection timeouted"
+      "timeout": "Connection timed out!"
     },
     "step": {
       "user": {
         "data": {
-          "host": "Hostname or IP-address"
+          "host": "Hostname or IP address"
         }
       }
     }
